# minesweeper

./: CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  field.cpp  field.h  icon.aps  icon.rc  images.qrc  minesweeper.cpp  minesweeper.h  minesweeper.ui  tile.cpp  tile.h  title.cpp  title.h
src/: dialog.cpp  main.cpp  minesweeper.cpp  tile.cpp
